# scanner-data-app

./: README.md  omzet_scanner_data.xlsx  pyproject.toml  requirements.txt  streamlit_app.py
